feature: completing crud comments
